<resources>
    <string name="app_name">localhackday2017</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main_maps">Map</string>
    <string name="title_item_list">Events Near Me</string>
    <string name="title_item_detail">Event Details</string>
    <string name="create_event_title">Create event</string>
    <string name="create_event_name">Event Name</string>
    <string name="create_event_location">Event Location</string>
    <string name="create_event_location_autodetect">Change location</string>
    <string name="create_event_description">Event Description</string>
    <string name="create_event_tags">Tags</string>
    <string name="create_event_visibility">Show event to:</string>
    <string name="create_event_visibility_groups_only">My groups only</string>
    <string name="create_event_visibility_friends_only">My friends only</string>
    <string name="create_event_visibility_everyone">Everyone on campus</string>
</resources>
